add mol weight to labels

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -93,8 +93,8 @@
 /* theo prot line */
 .theo-weight-line {
   stroke-dasharray: 0.9;
-  stroke-width: 1;
-  stroke: green;
+  stroke-width: 1.5;
+  stroke: red;
   pointer-events: none;
 }
 
