change to peptide view when clicking on slice

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -110,7 +110,11 @@
   pointer-events: none;
 }
 
-.slice-bar:hover {
+.slice-bar{
+  pointer-events: none;
+}
+
+.slice-bar-background:hover {
   cursor: pointer;
 }
 
