reverse y-axis in peptide view

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -94,7 +94,7 @@
 .theo-weight-line {
   stroke-dasharray: 0.9;
   stroke-width: 1.5;
-  stroke: red;
+  stroke: silver;
   pointer-events: none;
 }
 
