set correct selections

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -180,7 +180,7 @@ svgCheckbox
 /****
 pumba notifications
  */
-.pumba-notification {
+.pumba-notification.loading {
   top: 60px;
   right: 20px;
   width: 200px;
