remove SIB logo

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -43,7 +43,7 @@
  */
 
 .human-organism {
-    background-color: #ebf4ff !important;
+    background-color: #e0efff !important;
 }
 
 .mouse-organism {
