place isotope labels so everything is visible.

--- a/src/styles/GelView.css
+++ b/src/styles/GelView.css
@@ -46,6 +46,12 @@
     stroke-dasharray: 4;
 }
 
+.isoform-label-line-gel {
+    pointer-events: none;
+    stroke: green;
+    stroke-width: 1;
+}
+
 .expand-info {
     fill: grey;
     font-size: 50%;
