--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -74,6 +74,7 @@
  */
 
 #protein-viz {
+  max-height: 800px;
   height: calc(100% - 60px);
   width: 100%;
   /*padding-bottom: 60px;*/
@@ -83,6 +84,8 @@
   height: 100%;
   width: 100%;
 }
+
+
 
 /***********************************/
 /*** Merged2DPlot
