--- a/src/styles/PeptideView.css
+++ b/src/styles/PeptideView.css
@@ -8,6 +8,9 @@
 #peptide-plot {
     height: 100%;
     width: 100%;
+    padding-top: 10px;
+    padding-left: 10px;
+    padding-right: 10px;
 }
 
 .pep-x-axis {
