--- a/src/styles/OptionsMenu.css
+++ b/src/styles/OptionsMenu.css
@@ -7,6 +7,7 @@
     border-radius: 5px;
     border: 1px solid lightgrey;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    min-width: 400px;
 }
 
 .options-checkbox-span{
@@ -15,4 +16,5 @@
 
 .options-paragraph{
     margin-bottom: 6px;
+    text-align: left;
 }
