--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -42,6 +42,12 @@
  navbar
  */
 
+ #navbar-pumba-title{
+   padding-left: 10px;
+   font-weight: bold;
+   font-size: 120%;
+ }
+
 .human-organism {
     background-color: #e0efff !important;
 }
