--- a/src/styles/GelView.css
+++ b/src/styles/GelView.css
@@ -63,6 +63,15 @@
     user-select: none;
 }
 
+.gel-not-first {
+    font-family: sans-serif;
+    font-size: 16px;
+    font-weight: bold;
+    pointer-events: none;
+    user-select: none;
+    fill:  red;
+}
+
 .gel-title-merged {
      font-family: sans-serif;
      font-size: 12px;
