--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -255,11 +255,11 @@ protein title
 
 .protein-title-warning {
   font-family: sans-serif;
-  font-size: 12px;
+  font-size: 8px;
   font-weight: normal;
   pointer-events: none;
   user-select: none;
-  fill:  red;
+  /*fill:  black;*/
 }
 
 /****
