--- a/src/styles/GelView.css
+++ b/src/styles/GelView.css
@@ -65,11 +65,11 @@
 
 .gel-not-first {
     font-family: sans-serif;
-    font-size: 16px;
+    font-size: 12px;
     font-weight: bold;
     pointer-events: none;
     user-select: none;
-    fill:  red;
+    fill: black;
 }
 
 .gel-title-merged {
